cors config y auth